[BACKLOG-40227][BACKLOG-40228][BACKLOG-40229][BACKLOG-40230]

--- a/shims/apache/driver/pom.xml
+++ b/shims/apache/driver/pom.xml
@@ -276,7 +276,7 @@
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-bundle</artifactId>
-      <version>${aws-java-sdk.version}</version>
+      <version>${aws-java-sdk-core.version}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.dataformat</groupId>
