--- a/shim-api-core/pom.xml
+++ b/shim-api-core/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.pentaho</groupId>
     <artifactId>pentaho-hadoop-shims</artifactId>
-    <version>9.5.0.0-SNAPSHOT</version>
+    <version>9.5.0.0-74</version>
   </parent>
 
   <artifactId>shim-api-core</artifactId>
-  <version>9.5.0.0-SNAPSHOT</version>
+  <version>9.5.0.0-74</version>
   <packaging>jar</packaging>
 
   <dependencies>
