--- a/shims/hdp30/driver/pom.xml
+++ b/shims/hdp30/driver/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.pentaho.hadoop.shims</groupId>
     <artifactId>pentaho-hadoop-shims-hdp30-reactor</artifactId>
-    <version>9.4.0.0-SNAPSHOT</version>
+    <version>9.4.0.1-420</version>
   </parent>
 
   <artifactId>pentaho-hadoop-shims-hdp30-driver</artifactId>
-  <version>9.4.0.0-SNAPSHOT</version>
+  <version>9.4.0.1-420</version>
   <packaging>bundle</packaging>
 
   <properties>
