--- a/shims/apache/kar/pom.xml
+++ b/shims/apache/kar/pom.xml
@@ -6,11 +6,11 @@
   <parent>
     <groupId>org.pentaho.hadoop.shims</groupId>
     <artifactId>pentaho-hadoop-shims-apache-reactor</artifactId>
-    <version>9.5.0.0-SNAPSHOT</version>
+    <version>9.5.0.0-164</version>
   </parent>
 
   <artifactId>pentaho-hadoop-shims-apache-kar</artifactId>
-  <version>9.5.0.0-SNAPSHOT</version>
+  <version>9.5.0.0-164</version>
   <packaging>kar</packaging>
 
   <dependencies>
