--- a/shims/mapr61/pmr/pom.xml
+++ b/shims/mapr61/pmr/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <groupId>org.pentaho.hadoop.shims</groupId>
         <artifactId>pentaho-hadoop-shims-mapr61-reactor</artifactId>
-        <version>9.5.0.0-SNAPSHOT</version>
+        <version>9.5.0.0-191</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>pentaho-hadoop-shims-mapr61-pmr-libs</artifactId>
 
-    <version>9.5.0.0-SNAPSHOT</version>
+    <version>9.5.0.0-191</version>
     <packaging>pom</packaging>
     <properties>
         <org.apache.hbase.version>1.4.8</org.apache.hbase.version>
