--- a/common-fragment-V1/pom.xml
+++ b/common-fragment-V1/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <groupId>org.pentaho</groupId>
     <artifactId>pentaho-hadoop-shims</artifactId>
-    <version>9.3.0.0-SNAPSHOT</version>
+    <version>9.3.2023.03.00-704</version>
   </parent>
 
   <groupId>org.pentaho.hadoop.shims</groupId>
   <artifactId>pentaho-hadoop-shims-common-fragment-V1</artifactId>
-  <version>9.3.0.0-SNAPSHOT</version>
+  <version>9.3.2023.03.00-704</version>
   <packaging>bundle</packaging>
 
   <properties>
