--- a/mapreduce/pom.xml
+++ b/mapreduce/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.pentaho</groupId>
     <artifactId>pentaho-hadoop-shims</artifactId>
-    <version>9.6.0.0-SNAPSHOT-16</version>
+    <version>9.6.0.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>pentaho-hadoop-shims-common-mapreduce</artifactId>
-  <version>9.6.0.0-SNAPSHOT-16</version>
+  <version>9.6.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <properties>
