--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   </parent>
 
   <artifactId>pentaho-hadoop-shims</artifactId>
-  <version>9.6.0.0-SNAPSHOT-16</version>
+  <version>9.6.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <properties>
