--- a/shims/mapr60/driver/pom.xml
+++ b/shims/mapr60/driver/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.pentaho.hadoop.shims</groupId>
     <artifactId>pentaho-hadoop-shims-mapr60-reactor</artifactId>
-    <version>9.6.0.0-SNAPSHOT-16</version>
+    <version>9.6.0.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>pentaho-hadoop-shims-mapr60-driver</artifactId>
-  <version>9.6.0.0-SNAPSHOT-16</version>
+  <version>9.6.0.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <properties>
     <pentaho-osgi-bundles.version>9.6.0.0-SNAPSHOT</pentaho-osgi-bundles.version>
