--- a/shims/cdpdc71/kar/pom.xml
+++ b/shims/cdpdc71/kar/pom.xml
@@ -6,11 +6,11 @@
   <parent>
     <groupId>org.pentaho.hadoop.shims</groupId>
     <artifactId>pentaho-hadoop-shims-cdpdc71-reactor</artifactId>
-    <version>9.6.0.0-SNAPSHOT</version>
+    <version>9.6.2023.04.00-21</version>
   </parent>
 
   <artifactId>pentaho-hadoop-shims-cdpdc71-kar</artifactId>
-  <version>9.6.0.0-SNAPSHOT</version>
+  <version>9.6.2023.04.00-21</version>
   <packaging>kar</packaging>
 
   <dependencies>
