--- a/shims/dataproc1421/pom.xml
+++ b/shims/dataproc1421/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.pentaho.hadoop.shims</groupId>
     <artifactId>pentaho-hadoop-shims-list</artifactId>
-    <version>9.6.0.0-SNAPSHOT</version>
+    <version>9.6.2023.04.00-43</version>
   </parent>
   <artifactId>pentaho-hadoop-shims-dataproc1421-reactor</artifactId>
   <packaging>pom</packaging>
