--- a/shims/dataproc1421/pmr/pom.xml
+++ b/shims/dataproc1421/pmr/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.pentaho.hadoop.shims</groupId>
     <artifactId>pentaho-hadoop-shims-dataproc1421-reactor</artifactId>
-    <version>9.6.0.0-SNAPSHOT</version>
+    <version>9.6.2023.04.00-80</version>
   </parent>
 
   <artifactId>pentaho-hadoop-shims-dataproc1421-pmr-libs</artifactId>
