[PPP-4832] Revert "Upgrade commons-dbcp to commons-dbcp2 and commons-pool to commons-pool2"
This reverts commit 30b677e3df4101423a4c21005267554145a08aca.

--- a/shims/dataproc1421/driver/pom.xml
+++ b/shims/dataproc1421/driver/pom.xml
@@ -435,7 +435,7 @@
                 org.codehaus.mojo:animal-sniffer-annotations,*:hbase-mapreduce
               </include>
               <exclude>
-                *:*log4j*,*:xml-apis,*:xercesImpl,*:commons-logging,*:commons-math3,*:commons-pool,*:commons-dbcp2,
+                *:*log4j*,*:xml-apis,*:xercesImpl,*:commons-logging,*:commons-math3,*:commons-pool,*:commons-dbcp,
                 *:jersey-guava,*:janino
               </exclude>
               <transitive>true</transitive>
