[PPP-4955] upgrading json-smart version to 2.5.0 version

--- a/shims/apache/driver/pom.xml
+++ b/shims/apache/driver/pom.xml
@@ -265,6 +265,12 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>net.minidev</groupId>
+      <artifactId>json-smart</artifactId>
+      <version>${json-smart.version}</version>
+    </dependency>
+
   </dependencies>
 
   <build>
